Add s3 lambda function policy

--- a/template.yml
+++ b/template.yml
@@ -36,6 +36,7 @@ Resources:
       FunctionName: !Sub s3-trigger-fn-${AWS::StackName}
       Handler: com.example.S3EventHandler::handleRequest
       CodeUri: target/
+      Policies:
         - SNSPublishMessagePolicy:
             TopicName: !GetAtt NotificationTopic.TopicName
       Environment:
