--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Build SAM application
-        run: sam build --use-container
+        run: sam build
 
       - name: Deploy SAM application
         run: |
